# PushBib

./: .coveragerc  .dockerignore  .env.template  .env.test  .gitignore  .pylintrc  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  pytest.ini  requirements.txt  run_robot_tests.sh  tasks.py
.github/workflows/: fly.yml  pylint.yml
docs/: Arkkitehtuuri.md  Käyttöohje.md  Käännökset.md  Tietokanta.md  raportti.md
src/: app.py  config.py  index.py  init_db.py
src/controllers/: hello_controller.py  language_controller.py  references_controller.py  test_controller.py  user_controller.py
src/repositories/: language_repository.py  reference_repository.py  user_repository.py
src/services/: language_service.py  reference_service.py  user_service.py
src/static/: dropdown_forms.js  style.css
src/templates/: index.html  layout.html  references.html  signup.html
src/tests/: conftest.py  login.robot  resource.robot  temp_test.robot
src/tests/repositories/: reference_repository_test.py  reference_service_test.py
src/tests/robot/: AppLibrary.py  add_reference.robot  delete_reference.robot  language.robot  login.robot  logout.robot  reference.robot  resource.robot
src/tests/services/: __init__.py  language_service_test.py  reference_service_test.py  test_bib_output_should_be.bib  user_service_test.py
translations/fi/LC_MESSAGES/: messages.po
