[tool.poetry]
name = "pushbib"
version = "0.1.0"
description = "A web application for saving reference information to a database and exporting the information from said website in a BibTex format."
authors = ["PushIT"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
robotframework = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
